user met access requirement if either has exemption or has approvals on all the ARs