@@ -390,7 +390,9 @@ public class EntityAuthorizationManagerAutowireTest {
 
 		Long arId = managedHelper.create(a -> {
 			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
-			a.setSubjectIds(Collections.singletonList(new RestrictableObjectDescriptor().setId(project.getId()).setType(RestrictableObjectType.ENTITY)));
+			a.setSubjectIds(Collections.singletonList(
+					new RestrictableObjectDescriptor().setId(project.getId())
+							.setType(RestrictableObjectType.ENTITY)));
 		}).getId();
 
 		aclHelper.create((a) -> {
@@ -422,7 +424,9 @@ public class EntityAuthorizationManagerAutowireTest {
 
 		Long arId = managedHelper.create(a -> {
 			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
-			a.setSubjectIds(Collections.singletonList(new RestrictableObjectDescriptor().setId(project.getId()).setType(RestrictableObjectType.ENTITY)));
+			a.setSubjectIds(Collections.singletonList(
+					new RestrictableObjectDescriptor().setId(project.getId())
+							.setType(RestrictableObjectType.ENTITY)));
 		}).getId();
 
 		aclHelper.create((a) -> {
@@ -453,59 +457,85 @@ public class EntityAuthorizationManagerAutowireTest {
 			a.getSubjectIds().get(0).setId(project.getId());
 		});
 
-		String entityId = project.getId();
-		UserInfo user = userTwo;
-		ACCESS_TYPE accessType = ACCESS_TYPE.DOWNLOAD;
-
-		// new call under test
+		// call under test
 		String newMessage = assertThrows(UnauthorizedException.class, () -> {
-			entityAuthManager.hasAccess(user, entityId, accessType).checkAuthorizationOrElseThrow();
+			entityAuthManager.hasAccess(userTwo, project.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
 		}).getMessage();
 		assertEquals(ERR_MSG_THERE_ARE_UNMET_AND_NON_EXEMPTED_ACCESS_REQUIREMENTS, newMessage);
 	}
 
 	/**
-	 * Data contributors are not global.
 	 * A Data Contributor’s AR “exemption” must be limited to data within the scope of their contribution.
 	 */
 	@Test
-	public void testHasAccessDownloadWithExemptionEligibleOnOneProject() {
+	public void testHasAccessDownloadWithExemptionEligibleOnSomeFilesOfOneProject() {
 		Node projectOne = nodeDaoHelper.create(n -> {
 			n.setName("aProject");
-			n.setCreatedByPrincipalId(userOne.getId());
+			n.setCreatedByPrincipalId(adminUserInfo.getId());
+		});
+
+		Node fileOne = nodeDaoHelper.create(n -> {
+			n.setName("aFile");
+			n.setCreatedByPrincipalId(adminUserInfo.getId());
+			n.setParentId(projectOne.getId());
+			n.setNodeType(EntityType.file);
+		});
+
+		Node fileTwo = nodeDaoHelper.create(n -> {
+			n.setName("aFileTwo");
+			n.setCreatedByPrincipalId(adminUserInfo.getId());
+			n.setParentId(projectOne.getId());
+			n.setNodeType(EntityType.file);
 		});
 
 		Node projectTwo = nodeDaoHelper.create(n -> {
 			n.setName("anotherProject");
-			n.setCreatedByPrincipalId(userOne.getId());
+			n.setCreatedByPrincipalId(adminUserInfo.getId());
 		});
 
-		// userTwo is contributor for projectOne
+		Node fileThree = nodeDaoHelper.create(n -> {
+			n.setName("aFileThree");
+			n.setCreatedByPrincipalId(adminUserInfo.getId());
+			n.setParentId(projectTwo.getId());
+		});
+
+		// userTwo is contributor for fileOne and has download access
 		aclHelper.create((a) -> {
-			a.setId(projectOne.getId());
+			a.setId(fileOne.getId());
 			a.setResourceAccess(Collections.singleton(
 					new ResourceAccess().setPrincipalId(userTwo.getId())
 							.setAccessType(Set.of(ACCESS_TYPE.UPDATE, ACCESS_TYPE.DELETE, ACCESS_TYPE.DOWNLOAD))));
 		});
 
-		// userTwo is contributor for projectTwo
+		// userTwo is contributor for fileTwo with no download access
 		aclHelper.create((a) -> {
-			a.setId(projectTwo.getId());
+			a.setId(fileTwo.getId());
 			a.setResourceAccess(Collections.singleton(
 					new ResourceAccess().setPrincipalId(userTwo.getId())
 							.setAccessType(Set.of(ACCESS_TYPE.UPDATE, ACCESS_TYPE.DELETE))));
 		});
 
-		//AR for projectOne
+		// userTwo is contributor for fileThree with no download access
+		aclHelper.create((a) -> {
+			a.setId(fileThree.getId());
+			a.setResourceAccess(Collections.singleton(
+					new ResourceAccess().setPrincipalId(userTwo.getId())
+							.setAccessType(Set.of(ACCESS_TYPE.UPDATE, ACCESS_TYPE.DELETE))));
+		});
+
+		//AR on fileOne and fileTwo
 		Long arId = managedHelper.create(a -> {
 			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
-			a.setSubjectIds(Collections.singletonList(
+			a.setSubjectIds(List.of(
 					new RestrictableObjectDescriptor()
-							.setId(projectOne.getId())
+							.setId(fileOne.getId())
+							.setType(RestrictableObjectType.ENTITY),
+					new RestrictableObjectDescriptor()
+							.setId(fileTwo.getId())
 							.setType(RestrictableObjectType.ENTITY)));
 		}).getId();
 
-		//Exemption ACL on AR
+		//Exemption ACL on arId
 		aclHelper.create((a) -> {
 			a.setId(arId.toString());
 			a.setResourceAccess(Set.of(
@@ -514,26 +544,32 @@ public class EntityAuthorizationManagerAutowireTest {
 							.setAccessType(Collections.singleton(ACCESS_TYPE.EXEMPTION_ELIGIBLE))));
 		} , ObjectType.ACCESS_REQUIREMENT);
 
-		// userTwo is contributor for projectTwo but not exempted
+		// There is no AR on file three and also no download access
 		String newMessage = assertThrows(UnauthorizedException.class, () -> {
-			entityAuthManager.hasAccess(userTwo, projectTwo.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
+			entityAuthManager.hasAccess(userTwo, fileThree.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
 		}).getMessage();
 		assertEquals("You lack DOWNLOAD access to the requested entity.", newMessage);
 
-		//userTwo is contributor for projectOne and exempted
-		AuthorizationStatus status = entityAuthManager.hasAccess(userTwo, projectOne.getId(), ACCESS_TYPE.DOWNLOAD);
+		// userTwo is exempted for file Two but not met access requirement and has no download access.
+		String newMessageTwo = assertThrows(UnauthorizedException.class, () -> {
+			entityAuthManager.hasAccess(userTwo, fileTwo.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
+		}).getMessage();
+		assertEquals("You lack DOWNLOAD access to the requested entity.", newMessageTwo);
+
+		//userTwo is contributor for file One and exempted
+		AuthorizationStatus status = entityAuthManager.hasAccess(userTwo, fileOne.getId(), ACCESS_TYPE.DOWNLOAD);
 		assertNotNull(status);
 		assertTrue(status.isAuthorized());
 
-		//userOne is neither exempted nor approved for download
+		//userOne is neither exempted nor met access approval
 		String message = assertThrows(UnauthorizedException.class, () -> {
-			entityAuthManager.hasAccess(userOne, projectOne.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
+			entityAuthManager.hasAccess(userOne, fileOne.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
 		}).getMessage();
 		assertEquals("There are unmet access requirements that must be met and exemption is not eligible to read content in the requested container.", message);
 	}
 
 	@Test
-	public void testHasAccessDownloadWhenASingleARIsBoundToMultipleProjects() {
+	public void testHasAccessDownloadWhenASingleARIsBoundToMultipleEntities() {
 		groupMembersDAO.addMembers(teamOneId.toString(),List.of(userTwo.getId().toString()));
 
 		userTwo = userManager.getUserInfo(userTwo.getId());
@@ -542,36 +578,46 @@ public class EntityAuthorizationManagerAutowireTest {
 			n.setName("aProject");
 			n.setCreatedByPrincipalId(userOne.getId());
 		});
-		Node projectTwo = nodeDaoHelper.create(n -> {
-			n.setName("anotherProject");
+
+		Node fileOne = nodeDaoHelper.create(n -> {
+			n.setName("fileOne");
+			n.setParentId(projectOne.getId());
 			n.setCreatedByPrincipalId(userOne.getId());
+			n.setNodeType(EntityType.file);
 		});
 
-		//teamOneId is contributor for projectOne
+		Node fileTwo = nodeDaoHelper.create(n -> {
+			n.setName("fileTwo");
+			n.setParentId(projectOne.getId());
+			n.setCreatedByPrincipalId(userOne.getId());
+			n.setNodeType(EntityType.file);
+		});
+
+		//teamOneId is contributor for fileOne
 		aclHelper.create((a) -> {
-			a.setId(projectOne.getId());
+			a.setId(fileOne.getId());
 			a.setResourceAccess(Collections.singleton(
 					new ResourceAccess().setPrincipalId(teamOneId)
 							.setAccessType(Set.of(ACCESS_TYPE.UPDATE, ACCESS_TYPE.DELETE, ACCESS_TYPE.DOWNLOAD))));
 		});
 
-		// userOne is contributor for projectTwo
+		// userOne is contributor for fileTwo
 		aclHelper.create((a) -> {
-			a.setId(projectTwo.getId());
+			a.setId(fileTwo.getId());
 			a.setResourceAccess(Collections.singleton(
 					new ResourceAccess().setPrincipalId(userOne.getId())
 							.setAccessType(Set.of(ACCESS_TYPE.UPDATE, ACCESS_TYPE.DELETE, ACCESS_TYPE.DOWNLOAD))));
 		});
 
-		//AR for projectOne and projectTwo
+		//AR for file one and two
 		Long arId = managedHelper.create(a -> {
 			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
 			a.setSubjectIds(List.of(
 					new RestrictableObjectDescriptor()
-							.setId(projectOne.getId())
+							.setId(fileOne.getId())
 							.setType(RestrictableObjectType.ENTITY),
 					new RestrictableObjectDescriptor()
-							.setId(projectTwo.getId())
+							.setId(fileTwo.getId())
 							.setType(RestrictableObjectType.ENTITY)));
 		}).getId();
 
@@ -587,27 +633,187 @@ public class EntityAuthorizationManagerAutowireTest {
 							.setAccessType(Collections.singleton(ACCESS_TYPE.EXEMPTION_ELIGIBLE))));
 		} , ObjectType.ACCESS_REQUIREMENT);
 
-		//userTwo is member teamOne and teamOne is neither exempted nor approved for projectTwo
+		//userTwo is member teamOne. teamOne is eligible for exemption but not exempted as it is neither contributor nor met access
 		String newMessage = assertThrows(UnauthorizedException.class, () -> {
-			entityAuthManager.hasAccess(userTwo, projectTwo.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
+			entityAuthManager.hasAccess(userTwo, fileTwo.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
 		}).getMessage();
 		assertEquals("There are unmet access requirements that must be met and exemption is not eligible to read content in the requested container.", newMessage);
 
-		//userTwo is member teamOne and teamOne is contributor for projectOne and exempted
-		AuthorizationStatus statusOne = entityAuthManager.hasAccess(userTwo, projectOne.getId(), ACCESS_TYPE.DOWNLOAD);
+		//userTwo is member teamOne. TeamOne is contributor for fileOne and eligible for exemption
+		AuthorizationStatus statusOne = entityAuthManager.hasAccess(userTwo, fileOne.getId(), ACCESS_TYPE.DOWNLOAD);
 		assertNotNull(statusOne);
 		assertTrue(statusOne.isAuthorized());
 
-		//userOne is contributor and exempted for projectTwo
-		AuthorizationStatus statusTwo =entityAuthManager.hasAccess(userOne, projectTwo.getId(), ACCESS_TYPE.DOWNLOAD);
+		//userOne is creator of fileTwo hence approved and has download access
+		AuthorizationStatus statusTwo =entityAuthManager.hasAccess(userOne, fileTwo.getId(), ACCESS_TYPE.DOWNLOAD);
 		assertNotNull(statusTwo);
 		assertTrue(statusTwo.isAuthorized());
 
-		//userOne neither approved nor exempted for projectOne
+		//userOne creator of fileOne hence approved but has no download access
 		String message = assertThrows(UnauthorizedException.class, () -> {
-			entityAuthManager.hasAccess(userOne, projectOne.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
+			entityAuthManager.hasAccess(userOne, fileOne.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
 		}).getMessage();
-		assertEquals("There are unmet access requirements that must be met and exemption is not eligible to read content in the requested container.", message);
+		assertEquals("You lack DOWNLOAD access to the requested entity.", message);
+	}
+
+	@Test
+	public void testHasAccessDownloadWithMultipleAROnEntityWithAndWithoutExemption() {
+		Node projectOne = nodeDaoHelper.create(n -> {
+			n.setName("aProject");
+			n.setCreatedByPrincipalId(userOne.getId());
+		});
+		Node fileOne = nodeDaoHelper.create(n -> {
+			n.setName("aFile");
+			n.setCreatedByPrincipalId(userOne.getId());
+			n.setParentId(projectOne.getId());
+			n.setNodeType(EntityType.file);
+		});
+
+		//userTwo is contributor for fileOne
+		aclHelper.create((a) -> {
+			a.setId(fileOne.getId());
+			a.setResourceAccess(Collections.singleton(
+					new ResourceAccess().setPrincipalId(userTwo.getId())
+							.setAccessType(Set.of(ACCESS_TYPE.UPDATE, ACCESS_TYPE.DELETE, ACCESS_TYPE.DOWNLOAD))));
+		});
+
+
+		//AR on fileOne
+		Long arId = managedHelper.create(a -> {
+			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
+			a.setSubjectIds(List.of(
+					new RestrictableObjectDescriptor()
+							.setId(fileOne.getId())
+							.setType(RestrictableObjectType.ENTITY)));
+		}).getId();
+		;
+		//AR Two on fileOne
+		Long arIdTwo = managedHelper.create(a -> {
+			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
+			a.setSubjectIds(List.of(
+					new RestrictableObjectDescriptor()
+							.setId(fileOne.getId())
+							.setType(RestrictableObjectType.ENTITY)));
+		}).getId();
+
+		//AR three on fileOne
+		Long arIdThree = managedHelper.create(a -> {
+			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
+			a.setSubjectIds(List.of(
+					new RestrictableObjectDescriptor()
+							.setId(fileOne.getId())
+							.setType(RestrictableObjectType.ENTITY)));
+		}).getId();
+
+		//Exemption ACL on AR One
+		aclHelper.create((a) -> {
+			a.setId(arId.toString());
+			a.setResourceAccess(Set.of(
+					new ResourceAccess()
+							.setPrincipalId(Long.valueOf(userTwo.getId()))
+							.setAccessType(Collections.singleton(ACCESS_TYPE.EXEMPTION_ELIGIBLE))));
+		} , ObjectType.ACCESS_REQUIREMENT);
+
+		aclHelper.create((a) -> {
+			a.setId(arIdTwo.toString());
+			a.setResourceAccess(Set.of(
+					new ResourceAccess()
+							.setPrincipalId(Long.valueOf(userTwo.getId()))
+							.setAccessType(Collections.singleton(ACCESS_TYPE.REVIEW_SUBMISSIONS))));
+		} , ObjectType.ACCESS_REQUIREMENT);
+
+		aclHelper.create((a) -> {
+			a.setId(arIdThree.toString());
+			a.setResourceAccess(Set.of(
+					new ResourceAccess()
+							.setPrincipalId(Long.valueOf(userTwo.getId()))
+							.setAccessType(Collections.singleton(ACCESS_TYPE.DOWNLOAD))));
+		} , ObjectType.ENTITY);
+
+		//Multiple AR, one is eligible and the other is not on fileOne
+		String newMessage = assertThrows(UnauthorizedException.class, () -> {
+			entityAuthManager.hasAccess(userTwo, fileOne.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
+		}).getMessage();
+		assertEquals("There are unmet access requirements that must be met and exemption is not eligible to read content in the requested container.", newMessage);
+
+		//userOne is creator of fileOne so user met access requirement without exemption and has no download access.
+		String newMessageTwo = assertThrows(UnauthorizedException.class, () -> {
+			entityAuthManager.hasAccess(userOne, fileOne.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
+		}).getMessage();
+		assertEquals("You lack DOWNLOAD access to the requested entity.", newMessageTwo);
+	}
+
+
+	@Test
+	public void testHasAccessDownloadWithTwoAROnEntityOneHasExemptionAndOneHasApproval() {
+		Node projectOne = nodeDaoHelper.create(n -> {
+			n.setName("aProject");
+			n.setCreatedByPrincipalId(userOne.getId());
+		});
+		Node fileOne = nodeDaoHelper.create(n -> {
+			n.setName("aFile");
+			n.setCreatedByPrincipalId(userOne.getId());
+			n.setParentId(projectOne.getId());
+			n.setNodeType(EntityType.file);
+		});
+
+		//userTwo is contributor for fileOne
+		aclHelper.create((a) -> {
+			a.setId(fileOne.getId());
+			a.setResourceAccess(Collections.singleton(
+					new ResourceAccess().setPrincipalId(userTwo.getId())
+							.setAccessType(Set.of(ACCESS_TYPE.UPDATE, ACCESS_TYPE.DELETE, ACCESS_TYPE.DOWNLOAD))));
+		});
+
+
+		//AR on fileOne
+		Long arId = managedHelper.create(a -> {
+			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
+			a.setSubjectIds(List.of(
+					new RestrictableObjectDescriptor()
+							.setId(fileOne.getId())
+							.setType(RestrictableObjectType.ENTITY)));
+		}).getId();
+		;
+		//AR two on fileOne
+		ManagedACTAccessRequirement arIdTwo = managedHelper.create(a -> {
+			a.setAccessType(ACCESS_TYPE.DOWNLOAD);
+			a.setSubjectIds(List.of(
+					new RestrictableObjectDescriptor()
+							.setId(fileOne.getId())
+							.setType(RestrictableObjectType.ENTITY)));
+		});
+
+		//Exemption ACL on AR one
+		aclHelper.create((a) -> {
+			a.setId(arId.toString());
+			a.setResourceAccess(Set.of(
+					new ResourceAccess()
+							.setPrincipalId(Long.valueOf(userTwo.getId()))
+							.setAccessType(Collections.singleton(ACCESS_TYPE.EXEMPTION_ELIGIBLE))));
+		} , ObjectType.ACCESS_REQUIREMENT);
+
+		// Approval for AR Two
+		accessApprovalHelper.create(a -> {
+			a.setCreatedBy(userOne.getId().toString());
+			a.setSubmitterId(userOne.getId().toString());
+			a.setRequirementId(arIdTwo.getId());
+			a.setRequirementVersion(arIdTwo.getVersionNumber());
+			a.setState(ApprovalState.APPROVED);
+			a.setAccessorId(userTwo.getId().toString());
+		});
+
+
+		//Two AR, one is exemption eligible and the other has approval
+		AuthorizationStatus status =entityAuthManager.hasAccess(userTwo, fileOne.getId(), ACCESS_TYPE.DOWNLOAD);
+		assertNotNull(status);
+		assertTrue(status.isAuthorized());
+
+		//userOne is creator of fileOne so user met access requirement without exemption and has no download access.
+		String newMessageTwo = assertThrows(UnauthorizedException.class, () -> {
+			entityAuthManager.hasAccess(userOne, fileOne.getId(), ACCESS_TYPE.DOWNLOAD).checkAuthorizationOrElseThrow();
+		}).getMessage();
+		assertEquals("You lack DOWNLOAD access to the requested entity.", newMessageTwo);
 	}
 	
 	@Test
